fix: z-index top button

--- a/src/app/components/buttons/TopButton.module.scss
+++ b/src/app/components/buttons/TopButton.module.scss
@@ -18,6 +18,7 @@
   border-radius: 30px;
   border: none;
   cursor: pointer;
+  z-index: 99;
   &:hover,
   &:focus {
     background: #f8f8f8;
